# linkbender

./: .env.example  .gitignore  README.md  index.py  pgvector.yml  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  README.md  index.py  package-lock.json  pyproject.toml  requirements.txt  web_search.py
backend/knowledge/: coinbase.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  DynamicFeed.tsx  Feed.tsx  Header.tsx  KanbanColumn.tsx  MainContent.tsx  TabNavigation.tsx  TagFeed.tsx  URLFeed.tsx  URLInput.tsx
frontend/src/queries/: queryClient.ts  useFeed.tsx  useTags.ts
frontend/src/types/: index.ts
knowledge/: consolidated_urls.csv  tanstack.json
my-scraper/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
my-scraper/src/: App.css  App.jsx  index.css
